--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@types/node": "22.10.10",
+    "@types/react": "19.0.8",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.6.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.7.3"
   }
 }
